<resources>
    <string name="app_name">owner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_discover_a_curated_selection_of_products_just_for_you">Login to discover a curated selection of products just for you</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account_name_your_market">Welcome to Honey Mart!! \n Create an account, Name your market and choose its category to start selling your products</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_word">Continue</string>
    <string name="already_have_account">Already have account?</string>
    <string name="log_in">Log in</string>
    <string name="title_icon">title_icon</string>
    <string name="honey">Honey</string>
    <string name="mart">Mart</string>
    <string name="honey_image">honey image</string>
    <string name="market_info">Market info</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="send">Send</string>
    <string name="market_image">Market Image</string>
    <string name="market_name">Market name</string>
    <string name="account_already_exist">This account already exist</string>
    <string name="something_went_wrong">Something went wrong,please try again</string>
    <string name="name_should_not_be_empty">name should not be empty</string>
    <string name="invalid_name">Invalid name</string>
    <string name="email_should_not_be_empty">email should not be empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="Invalid_username_or_password">Invalid username or password</string>
    <string name="password_should_not_be_empty">Password should not be empty</string>
    <string name="password_length_must_be_at_least_8">Password length must be at least 8</string>
    <string name="password_length_must_be_at_least_14">Password length must be less than 14</string>
    <string name="please_write_at_least_1_special_character">Please write at least 1 special character</string>
    <string name="please_write_at_least_1_letter">Please write at least 1 letter</string>
    <string name="please_write_at_least_1_digit">Please write at least 1 digit</string>
    <string name="please_fill_required_fields">Please fill required fields</string>
    <string name="password_does_not_match">password does not match</string>
    <string name="market_name_should_not_be_empty">market name should not be empty</string>
    <string name="invalid_market_name">Invalid market name</string>
    <string name="market_address_should_not_be_empty">Market address should not be empty</string>
    <string name="invalid_market_address">Invalid market address</string>
    <string name="market_description_should_not_be_empty">market description should not be empty</string>
    <string name="market_description_should_be_20_letter_at_least">market description should be 20 letter at least</string>
    <string name="something_went_wrong_please_try_again">Something went wrong,please check your network and try again.</string>
    <string name="market_has_been_deleted">market has been deleted</string>
</resources>