<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="org.the_chance.honeymart.ui.LoginFragment">

            <View
                android:id="@+id/image_background"
                android:layout_width="603dp"
                android:layout_height="match_parent"
                android:background="@drawable/image_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/image_icon_honey_mart"
                android:layout_width="281dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginEnd="259.3dp"
                android:background="@drawable/logo_honey_mart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/image_background"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="190dp"
                android:layout_height="150dp"
                android:layout_marginStart="1144dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/image_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/text_description"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_welcome_back"
                style="@style/Theme.HoneyMart.Text.H1.DarkSubtle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:layout_marginStart="850dp"
                android:layout_marginEnd="222dp"
                android:text="@string/welcome_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_description"
                style="@style/Theme.HoneyMart.Text.H2.DarkModerate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_32"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginStart="660dp"
                android:text="@string/login_to_discover_a_curated_selection_of_products_just_for_you"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/text_welcome_back"
                app:layout_constraintStart_toStartOf="@+id/text_welcome_back"
                app:layout_constraintTop_toBottomOf="@+id/text_welcome_back" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_input_full_name"
                style="@style/Theme.HoneyMart.H6.TextInputLayout"
                android:layout_width="550dp"
                android:layout_height="56dp"
                android:layout_marginTop="112dp"
                android:layout_marginStart="80.68dp"
                android:layout_marginEnd="51dp"
                android:hint="@string/full_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_background"
                app:layout_constraintTop_toBottomOf="@+id/text_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_field_full_name"
                    style="@style/Theme.HoneyMart.Text.H6.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_input_password"
                style="@style/Theme.HoneyMart.H6.TextInputLayout"
                android:layout_width="550dp"
                android:layout_height="56dp"
                android:layout_marginTop="@dimen/spacing_16"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@id/text_field_input_full_name"
                app:layout_constraintStart_toStartOf="@id/text_field_input_full_name"
                app:layout_constraintTop_toBottomOf="@+id/text_field_input_full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_password"
                    style="@style/Theme.HoneyMart.Text.H6.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_continue"
                style="@style/Theme.HoneyMart.Button"
                android:layout_width="550dp"
                android:layout_height="56dp"
                android:layout_marginTop="112dp"
                android:background="@drawable/button_background"
                android:text="@string/log_in"
                app:layout_constraintEnd_toEndOf="@id/text_field_input_password"
                app:layout_constraintStart_toStartOf="@id/text_field_input_password"
                app:layout_constraintTop_toBottomOf="@+id/text_field_input_password" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_dont_have_account"
                style="@style/Theme.HoneyMart.Text.H6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="253.18dp"
                android:layout_marginTop="168dp"
                android:layout_marginEnd="@dimen/spacing_4"
                android:layout_marginBottom="@dimen/spacing_24"
                android:gravity="center"
                android:text="@string/don_t_have_an_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_signup"
                app:layout_constraintStart_toEndOf="@id/image_background"
                app:layout_constraintTop_toBottomOf="@+id/button_continue" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_signup"
                style="@style/Theme.HoneyMart.Text.H5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/primary_100"
                app:layout_constraintBottom_toBottomOf="@+id/text_dont_have_account"
                app:layout_constraintStart_toEndOf="@+id/text_dont_have_account"
                app:layout_constraintTop_toTopOf="@+id/text_dont_have_account" />




        </androidx.constraintlayout.widget.ConstraintLayout>


</layout>